Implement getMyStream()
